# eir

./: README.md  eir_layers.yaml  pyproject.toml
src/eir/: __init__.py  config.py  core.py  layers.py  router.py
tests/: test_eir.py
